Experimenting fix to background-image on mobile

--- a/css/style-global.css
+++ b/css/style-global.css
@@ -9,6 +9,7 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	height: 100vh;
 }
 
 .panel {
